# accelerators-course

./: README.md
lab1/: README.md  daxpy.cpp  daxpy_profiling_example.c  function_profiling_example.cpp  perf_count.cpp  perf_count.hpp
lab1/hsy/: branch_predictor.cpp  l1_cache.cpp  l1_cacheline.cpp  l2_llc_cache.cpp  tlb_cache.cpp
lab2/: README.md
lab2/amd/: CMakeLists.txt
lab2/amd/gtest/: group_by.h  prefix_sum.cpp  prefix_sum.h  reduce.cpp  segmented_scan.h  sort.cpp  sort.h
lab2/amd/include/: verify.hpp
lab2/gtest/: CMakeLists.txt  group_by.cpp  histogram.cpp  histogram.h  reduce.h  segmented_scan.cpp
lab2/include/: half.hpp
lab2/nvidia/: CMakeLists.txt
lab2/nvidia/gtest/: CMakeLists.txt  group_by.cu  group_by.h  histogram.cu  histogram.h  prefix_sum.cu  reduce.cu  reduce.h  segmented_scan.cu  segmented_scan.h  sort.cu  sort.h
lab2/task/: TASK.md
lab3/: README.md
lab3/AMD/: CMakeLists.txt  README.md
lab3/AMD/gtest/: matmul.cpp  matmul.h
lab3/AMD/include/: bfloat16.hpp  random.hpp
lab3/NVIDIA/: .README.md.swp  CMakeLists.txt  README.md
lab3/NVIDIA/gtest/: .matmul.cu.swp  .matmul.h.swp  CMakeLists.txt  matmul.cu  matmul.h
lab3/NVIDIA/task/: TASK.md
lab3/gtest/: .prefix_sum.cpp.swp  CMakeLists.txt  matmul.h
lab3/task/: TASK.md
lab4/: README.md
lab4/gtest/: CMakeLists.txt  conv.cpp  conv.h
lab4/include/: config.h  data_type.h  tensor.hpp
lab4/task/: TASK.md
profiler/: README.md
profiler/NVIDIA/: CMakeLists.txt
profiler/NVIDIA/gtest/: CMakeLists.txt  matmul.cu  matmul.h
profiler/NVIDIA/include/: .verify.hpp.swp  config.h
streams/: README.md
streams/NVIDIA/gtest/: .skewing.cu.swp  CMakeLists.txt  skewing.cu  skewing.h  stream_example.cu  ~
